[package]
name = "chip8-oxidized"
version = "0.1.0"
authors = ["valentinpi <valentinpickel@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
#sdl2 = "0.34"
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }

#[[bin]]
#name = "chip8-oxidized"
#path = "src/chip8/main.rs"

#[[bin]]
#name = "schip8-oxidized"
#path = "src/schip8/main.rs"
