[package]
name = "chip8-oxidized"
version = "0.1.0"
authors = ["valentinpi <valentinpickel@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }
wasm-bindgen = "0.2.62"

[[bin]]
name = "chip8-oxidized"
path = "src/main.rs"

#[lib]
#name = "chip8_oxidized"
#crate-type = ["cdylib", "rlib"]
#path = "src/schip8.rs"
