[package]
name = "web"
version = "0.1.0"
authors = ["valentinpi <valentinpickel@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.41"
serde = { version = "1.0.114", features = [ "derive" ] }
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2.64"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/schip8.rs"
